--- a/css/main.css
+++ b/css/main.css
@@ -558,11 +558,17 @@ section{
 
 .container{
   width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 1rem;
+  padding-left: 1rem;
 }
 
 @media (min-width: 480px){
   .container{
     max-width: 480px;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
   }
 }
 
@@ -575,18 +581,6 @@ section{
 @media (min-width: 1024px){
   .container{
     max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px){
-  .container{
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px){
-  .container{
-    max-width: 1536px;
   }
 }
 
@@ -628,6 +622,14 @@ section{
   position: relative;
 }
 
+.-bottom-4{
+  bottom: -1rem;
+}
+
+.-left-4{
+  left: -1rem;
+}
+
 .left-0{
   left: 0px;
 }
@@ -653,6 +655,10 @@ section{
   margin-right: auto;
 }
 
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
 .ml-4{
   margin-left: 1rem;
 }
@@ -675,6 +681,24 @@ section{
 
 .w-full{
   width: 100%;
+}
+
+.basis-1\/3{
+  flex-basis: 33.333333%;
+}
+
+.transform{
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes move{
+  50%{
+    transform: translateY(-1rem);
+  }
+}
+
+.animate-movingY{
+  animation: move 2s linear infinite;
 }
 
 .cursor-pointer{
@@ -709,6 +733,14 @@ section{
   gap: 1.25rem;
 }
 
+.overflow-hidden{
+  overflow: hidden;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
 .border-b{
   border-bottom-width: 1px;
 }
@@ -723,6 +755,21 @@ section{
   background-color: rgb(1 10 94 / var(--tw-bg-opacity));
 }
 
+.bg-secondaryColor{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 204 0 / var(--tw-bg-opacity));
+}
+
+.bg-greenColor{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 121 54 / var(--tw-bg-opacity));
+}
+
+.bg-redColor{
+  --tw-bg-opacity: 1;
+  background-color: rgb(204 52 51 / var(--tw-bg-opacity));
+}
+
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -731,6 +778,11 @@ section{
 .py-14{
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .text-center{
@@ -761,6 +813,11 @@ section{
   line-height: 1.75rem;
 }
 
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .uppercase{
   text-transform: uppercase;
 }
@@ -768,6 +825,11 @@ section{
 .text-secondaryColor{
   --tw-text-opacity: 1;
   color: rgb(255 204 0 / var(--tw-text-opacity));
+}
+
+.text-blackColor{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .duration-200{
@@ -815,6 +877,14 @@ section{
   color: rgb(192 192 192 / var(--tw-text-opacity));
 }
 
+.card__title{
+  font-family: Oswald, sans-serif;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
 .hover\:text-secondaryColor:hover{
   --tw-text-opacity: 1;
   color: rgb(255 204 0 / var(--tw-text-opacity));
@@ -847,24 +917,36 @@ section{
     display: none;
   }
 
-  .md\:w-2\/4{
-    width: 50%;
+  .md\:w-10\/12{
+    width: 83.333333%;
   }
 
   .md\:w-4\/5{
     width: 80%;
   }
 
-  .md\:w-80{
-    width: 20rem;
-  }
-
   .md\:w-auto{
     width: auto;
   }
 
+  .md\:flex-1{
+    flex: 1 1 0%;
+  }
+
+  .md\:basis-1\/2{
+    flex-basis: 50%;
+  }
+
   .md\:flex-row{
     flex-direction: row;
+  }
+
+  .md\:justify-start{
+    justify-content: flex-start;
+  }
+
+  .md\:gap-20{
+    gap: 5rem;
   }
 
   .md\:border-none{
@@ -876,7 +958,17 @@ section{
     padding-bottom: 0px;
   }
 
-  .md\:text-left{
-    text-align: left;
+  .md\:text-start{
+    text-align: start;
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:basis-2\/5{
+    flex-basis: 40%;
+  }
+
+  .lg\:basis-3\/5{
+    flex-basis: 60%;
   }
 }
