--- a/css/main.css
+++ b/css/main.css
@@ -683,6 +683,10 @@ section{
   width: 100%;
 }
 
+.w-40{
+  width: 10rem;
+}
+
 .basis-1\/3{
   flex-basis: 33.333333%;
 }
@@ -733,6 +737,12 @@ section{
   gap: 1.25rem;
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
@@ -750,9 +760,19 @@ section{
   border-color: rgb(255 204 0 / var(--tw-border-opacity));
 }
 
+.bg-greenColor{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 121 54 / var(--tw-bg-opacity));
+}
+
 .bg-primaryColor{
   --tw-bg-opacity: 1;
   background-color: rgb(1 10 94 / var(--tw-bg-opacity));
+}
+
+.bg-redColor{
+  --tw-bg-opacity: 1;
+  background-color: rgb(204 52 51 / var(--tw-bg-opacity));
 }
 
 .bg-secondaryColor{
@@ -760,14 +780,13 @@ section{
   background-color: rgb(255 204 0 / var(--tw-bg-opacity));
 }
 
-.bg-greenColor{
+.bg-primaryColorLight{
   --tw-bg-opacity: 1;
-  background-color: rgb(0 121 54 / var(--tw-bg-opacity));
+  background-color: rgb(1 13 120 / var(--tw-bg-opacity));
 }
 
-.bg-redColor{
-  --tw-bg-opacity: 1;
-  background-color: rgb(204 52 51 / var(--tw-bg-opacity));
+.p-5{
+  padding: 1.25rem;
 }
 
 .py-10{
@@ -783,6 +802,10 @@ section{
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
 }
 
 .text-center{
@@ -822,14 +845,14 @@ section{
   text-transform: uppercase;
 }
 
-.text-secondaryColor{
-  --tw-text-opacity: 1;
-  color: rgb(255 204 0 / var(--tw-text-opacity));
-}
-
 .text-blackColor{
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-secondaryColor{
+  --tw-text-opacity: 1;
+  color: rgb(255 204 0 / var(--tw-text-opacity));
 }
 
 .duration-200{
@@ -885,6 +908,20 @@ section{
   text-transform: uppercase;
 }
 
+.first-line\:flex::first-line{
+  display: flex;
+}
+
+@keyframes move{
+  50%{
+    transform: translateY(-1rem);
+  }
+}
+
+.hover\:animate-movingY:hover{
+  animation: move 2s linear infinite;
+}
+
 .hover\:text-secondaryColor:hover{
   --tw-text-opacity: 1;
   color: rgb(255 204 0 / var(--tw-text-opacity));
@@ -903,6 +940,11 @@ section{
   .md\:mx-auto{
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .md\:mx-5{
+    margin-left: 1.25rem;
+    margin-right: 1.25rem;
   }
 
   .md\:ml-auto{
@@ -941,6 +983,10 @@ section{
     flex-direction: row;
   }
 
+  .md\:items-center{
+    align-items: center;
+  }
+
   .md\:justify-start{
     justify-content: flex-start;
   }
@@ -958,17 +1004,37 @@ section{
     padding-bottom: 0px;
   }
 
+  .md\:pt-0{
+    padding-top: 0px;
+  }
+
   .md\:text-start{
     text-align: start;
   }
 }
 
 @media (min-width: 1024px){
+  .lg\:flex-1{
+    flex: 1 1 0%;
+  }
+
   .lg\:basis-2\/5{
     flex-basis: 40%;
   }
 
   .lg\:basis-3\/5{
     flex-basis: 60%;
+  }
+
+  .lg\:flex-row{
+    flex-direction: row;
+  }
+
+  .lg\:flex-row-reverse{
+    flex-direction: row-reverse;
+  }
+
+  .lg\:gap-10{
+    gap: 2.5rem;
   }
 }
